<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.2.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.bananayong</groupId>
    <artifactId>project</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>if build project</name>
    <packaging>pom</packaging>
    <description>Reference for new project</description>

    <developers>
        <developer>
            <name>bananayong</name>
            <email>banana.yong@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/bananayong/if-build-project</url>
    </scm>

    <modules>
        <module>project-parent</module>
        <module>project-domain</module>
        <module>project-server</module>
        <module>project-swagger</module>
        <module>project-test</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <pmd.version>6.20.0</pmd.version>
        <spotbugs.version>3.1.12</spotbugs.version>
        <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
        <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
        <checkstyle.version>8.27</checkstyle.version>
        <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
        <fingsecbugs-maven-plugin.version>1.10.1</fingsecbugs-maven-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs.version}</version>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArgs>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArgs>
                    <!--suppress MavenModelInspection -->
                    <includeFilterFile>${project.build.outputDirectory}/../../../config/spotbugs-include-filter.xml
                    </includeFilterFile>
                    <excludeFilterFile>${project.build.outputDirectory}/../../../config/spotbugs-exclude-filter.xml
                    </excludeFilterFile>
                    <plugins>
                        <plugin>
                            <groupId>com.h3xstream.findsecbugs</groupId>
                            <artifactId>findsecbugs-plugin</artifactId>
                            <version>${fingsecbugs-maven-plugin.version}
                            </version> <!-- Auto-update to the latest stable -->
                        </plugin>
                    </plugins>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs</artifactId>
                        <version>${spotbugs.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <version>${maven-pmd-plugin.version}</version>
                <configuration>
                    <verbose>true</verbose>
                    <aggregate>true</aggregate>
                    <linkXRef>false</linkXRef>
                    <failurePriority>5</failurePriority>
                    <minimumPriority>5</minimumPriority>
                    <printFailingErrors>true</printFailingErrors>
                    <rulesets>
                        <!--suppress MavenModelInspection -->
                        <ruleset>${maven.multiModuleProjectDirectory}/config/pmd-rulesets.xml</ruleset>
                    </rulesets>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                            <goal>cpd-check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-core</artifactId>
                        <version>${pmd.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-java8</artifactId>
                        <version>${pmd.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.sourceforge.pmd</groupId>
                        <artifactId>pmd-xml</artifactId>
                        <version>${pmd.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>config/checkstyle.xml</configLocation>
                    <encoding>UTF-8</encoding>
                    <consoleOutput>true</consoleOutput>
                    <violationSeverity>warning</violationSeverity>
                    <failsOnError>true</failsOnError>
                    <failOnViolation>true</failOnViolation>
                    <logViolationsToConsole>true</logViolationsToConsole>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>>post-unit-test</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>report-aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
